# grimoire

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
benchmarks/: README.md  common.py  requirements.txt  run_all.sh  summarize.py
benchmarks/dpo/: grimoire_dpo.py  trl_dpo.py  unsloth_dpo.py
benchmarks/sft/: grimoire_sft.py  trl_sft.py  unsloth_sft.py
docs/: callbacks.md  custom-loss.md  deepspeed.md  loss-formulas.md  training-methods.md  trl-comparison.md
grimoire/: __init__.py  callbacks.py  config.py  trainer.py
grimoire/data/: __init__.py  cache.py  grpo.py  kto.py  preference.py  prompt.py  sft.py
grimoire/losses/: __init__.py  cpo.py  dpo.py  grpo.py  ipo.py  kto.py  orpo.py  ppo.py  reward.py  sft.py  simpo.py  utils.py
tests/: test_config.py  test_data.py  test_losses.py  test_trainer.py
